<?xml version="1.0"?>
<package format="3">
  <name>miracle_final</name>
  <version>0.0.1</version>
  <description>Path tracking with QR stop and ArUco detection for TurtleBot</description>
  <maintainer email="vulpes@todo.todo">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>opencv</depend>

  <export></export>
</package>

